Blog page design

--- a/TheCoffeeSpace_WebApplication(MVC)/TheCoffeeSpace_WebApplication(MVC).csproj
+++ b/TheCoffeeSpace_WebApplication(MVC)/TheCoffeeSpace_WebApplication(MVC).csproj
@@ -8,10 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="wwwroot\NewFolder\**" />
-    <Content Remove="wwwroot\NewFolder\**" />
-    <EmbeddedResource Remove="wwwroot\NewFolder\**" />
-    <None Remove="wwwroot\NewFolder\**" />
+    <Content Remove="compilerconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="compilerconfig.json" />
   </ItemGroup>
 
   <ItemGroup>
